# neuralvault-os

./: .gitignore  ARCHITETTURA.md  README.md  WIKI_GUIDE.md  __init__.py  aegis_event_log.jsonl  agent007_intelligence.py  agent007_lab.py  api.py  check_divs.py  extracted_paper.txt  fix_api_v2.py  generate_playbook.py  hot_reloader.py  llms.txt  main.py  mcp_server.py  mirof-arch.md  neural_lab.py  requirements.txt  stack_dump.txt  test_forager.py  test_logs.txt  test_logs10.txt  test_logs2.txt  test_logs3.txt  test_logs4.txt  test_logs5.txt  test_logs6.txt  test_logs7.txt  test_logs8.txt  test_logs9.txt
DOCUMENTAZIONE/: AUTONOMOUS_PATCHING.md  CONSIGLI IMPLEMENTATIVI DI UN POOL DI AI.md  EPISTEMIC_SPECIFICATIONS.md  MIGRAZIONE_CQRS_ZERO_RISK.md  ROADMAP_UX_EFFICIENCY_WIKI_WHATIF.md  ROADMAP_V8.4.md  ROADMAP_V9.0_SOVEREIGN_HEGEMONY.md  SOVEREIGN_WIKI_SCHEMA.md  WIKI_WHATIF_DEEP_DIVE.md
StarWars/: progetto_space_combat.md
aura_extension/: INSTALLATION_GUIDE.md  manifest.json  popup.html  popup.js
benchmarks/: chaos_swarm_test.py
core/: aegis_coordinator.py  belief_revision.py  event_bus.py  merkle.py  obsidian_normalizer.py  snapshot_daemon.py
dashboard/: index.html
data/: agent007.db.wal  mesh_keys.json  node_id.json  vault_metadata.db.wal
evolution/: actuator.py  sleep_engine.py
governance/: consensus_router.py
index/: node.py  (+1 more)
neuralvault_rs/: Cargo.toml
neuralvault_rs/src/: causal_engine.rs  distance.rs  gpu_qmc.rs  hnsw_core.rs  lib.rs  wasm_core.rs
neuralvault_rs/src/gpu/: qmc_kernel.cu  qmc_kernel.metal
neuralvault_rs/src/index/: mod.rs
(+19766 files in other folders)
